add API updateCinemaRoom, deleteCinemaroom, getShowtimeById
