# routers/api/cinemaRoom.route.js
@@ -3,6 +3,8 @@ const {
   getAllCinemaRooms,
   getCinemaRoomById,
   addCinemaRoom,
+  updateCinemaRoom,
+  deleteCinemaRoom,
   updateCinemaRoomStatus,
 } = require("../../controllers/cinemaRoomController");
 const verifyRoles = require("../../middlewares/roleMiddleware");
@@ -20,13 +22,29 @@ router.route("/").get(
   getAllCinemaRooms,
 );
 
-router.route("/:id").get(
-  verifyRoles(ROLE.MANAGER, ROLE.CINEMA),
-  // #swagger.tags = ['CinemaRooms']
-  // #swagger.summary = 'Get a cinema room by id'
-  // #swagger.security = [{ "bearerAuth": [] }]
-  getCinemaRoomById
-);
+router
+  .route("/:id")
+  .get(
+    verifyRoles(ROLE.MANAGER, ROLE.CINEMA),
+    // #swagger.tags = ['CinemaRooms']
+    // #swagger.summary = 'Get a cinema room by id'
+    // #swagger.security = [{ "bearerAuth": [] }]
+    getCinemaRoomById
+  )
+  .patch(
+    verifyRoles(ROLE.MANAGER),
+    // #swagger.tags = ['CinemaRooms']
+    // #swagger.summary = 'Update a cinema room (partial)'
+    // #swagger.security = [{ "bearerAuth": [] }]
+    updateCinemaRoom
+  )
+  .delete(
+    verifyRoles(ROLE.MANAGER),
+    // #swagger.tags = ['CinemaRooms']
+    // #swagger.summary = 'Delete a cinema room'
+    // #swagger.security = [{ "bearerAuth": [] }]
+    deleteCinemaRoom
+  );
 
 router.route("/").post(
   verifyRoles(ROLE.MANAGER),
